--- a/src/main/res/values-pt/strings.xml
+++ b/src/main/res/values-pt/strings.xml
@@ -31,9 +31,9 @@ o seu teclado.    </string>
   <!-- changelog -->
   <string name="changelog">Alterações</string>
   <string name="search_market_for_addons">Procurar extras</string>
-  <string name="search_market_for_keyboard_addons">Obter mais teclados na <i>Play Store</i>…</string>
-  <string name="search_market_for_quick_key_addons">Obter mais <i>textos rápidos</i> e extras na <i>Play Store</i>…</string>
-  <string name="no_market_store_available"><b>* A Google Play Store não foi encontrada no seu dispositivo. Não é possível procurar extras!</b></string>
+  <string name="search_market_for_keyboard_addons">Obter mais teclados na loja de aplicativos…</string>
+  <string name="search_market_for_quick_key_addons">Obter mais <i>textos rápidos</i> e extras na loja de aplicativos…</string>
+  <string name="no_market_store_available"><b>* A loja de aplicativos não foi encontrada no seu dispositivo. Não é possível procurar extras!</b></string>
   <string name="keyboard_theme_tweak_group">Ajustes</string>
   <string name="close_button">Fechar</string>
   <!-- Indicates that a word has been added to the dictionary -->
