--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -18,9 +18,9 @@
   <string name="languages_cat">Языки</string>
   <string name="changelog">Список изменений</string>
   <string name="search_market_for_addons">Поиск дополнений</string>
-  <string name="search_market_for_keyboard_addons">Найти ещё клавиатуры в <i>Play Store</i>…</string>
-  <string name="search_market_for_quick_key_addons">Найдите больше <i>Quick-Text</i> дополнения в <i>Play Store</i>…</string>
-  <string name="no_market_store_available"><b>* Не удалось найти Google Play Store на вашем устройстве. Нет возможности искать дополнения!</b></string>
+  <string name="search_market_for_keyboard_addons">Найти ещё клавиатуры в магазин приложений…</string>
+  <string name="search_market_for_quick_key_addons">Найдите больше <i>Quick-Text</i> дополнения в магазин приложений…</string>
+  <string name="no_market_store_available"><b>* Не удалось найти магазин приложений на вашем устройстве. Нет возможности искать дополнения!</b></string>
   <string name="keyboard_theme_tweak_group">Детали</string>
   <string name="close_button">Закрыть</string>
   <string name="added_word">Сохранено:\u0020<xliff:g id="word">%s </xliff:g></string>
@@ -35,7 +35,7 @@
     <item>Не показывать</item>
   </string-array>
   <string name="voice_input_not_installed_title">Программа воспр. голоса не установлена</string>
-  <string name="voice_input_not_installed_text">Голосовой ввод Google не установлен на вашем устройства. \nЭто может быть легко исправлено: установить его сейчас из Play Store.</string>
+  <string name="voice_input_not_installed_text">Голосовой ввод Google не установлен на вашем устройства. \nЭто может быть легко исправлено: установить его сейчас из Google Play.</string>
   <string name="voice_input_not_installed_action_install">Установить</string>
   <string name="voice_input_not_installed_action_do_not_install">Нет</string>
   <string name="voice_input_not_voice_pack_in_market">Я не могу найти голосовой ввод (com.google.android.voicesearch) в Market. К сожалению, голосовой ввод не будет работать на вашем устройстве.
