--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -33,9 +33,9 @@
     <!-- changelog -->
     <string name="changelog">Change Log</string>
     <string name="search_market_for_addons">Search for add-ons</string>
-    <string name="search_market_for_keyboard_addons">Get more keyboards at <i>Google Play Store</i>…</string>
-    <string name="search_market_for_quick_key_addons">Get more <i>Quick-Text</i> add-ons at <i>Google Play Store</i>…</string>
-    <string name="no_market_store_available">Could not find <i>Google Play Store</i> on your device.\nUnable to search for add-ons!</string>
+    <string name="search_market_for_keyboard_addons">Get more keyboards at app store…</string>
+    <string name="search_market_for_quick_key_addons">Get more <i>Quick-Text</i> add-ons at app store…</string>
+    <string name="no_market_store_available">Could not find app store on your device.\nUnable to search for add-ons!</string>
     <string name="keyboard_theme_tweak_group">Tweaks</string>
     <string name="close_button">Close</string>
 
@@ -59,10 +59,10 @@
 
     <!-- voice -->
     <string name="voice_input_not_installed_title">Voice Is Not Installed</string>
-    <string name="voice_input_not_installed_text">Google\'s Voice Input is not installed on your device.\nThat can be easily fixed: install it now from <i>Google Play Store</i>.</string>
+    <string name="voice_input_not_installed_text">Google\'s Voice Input is not installed on your device.\nThat can be easily fixed: install it now from <i>Google Play</i>.</string>
     <string name="voice_input_not_installed_action_install">Install</string>
     <string name="voice_input_not_installed_action_do_not_install">No</string>
-    <string name="voice_input_not_voice_pack_in_market">I can not find voice input (com.google.android.voicesearch) at <i>Google Play Store</i>. Sorry, voice input will not work on your device.</string>
+    <string name="voice_input_not_voice_pack_in_market">I can not find voice input (com.google.android.voicesearch) at <i>Google Play</i>. Sorry, voice input will not work on your device.</string>
     <!-- Options menu -->
     <string name="change_ime">Change input method</string>
     <string name="override_dictionary">Override default dictionary</string>
